# ml_project

./: .gitignore  .nojekyll  EDA.ipynb  Machine_Learning_Project.ipynb  README.md  coloumns.txt  first.ipynb  improve.ipynb  index-preview.html  index.embed.ipynb  index.html  index.out.ipynb  index.qmd  main.ipynb  main.py  model_LGBMClassifier.pkl  model_LogisticRegression.pkl  model_XGBClassifier.pkl  project.ipynb  pyproject.toml  submission_LGBMClassifier.csv  submission_LogisticRegression.csv  submission_RandomForest.csv  submission_XGBClassifier.csv
report/: index.qmd  references.bib
