[project]
name = "ml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "lightgbm>=4.5.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "xgboost>=2.1.3",
]
